# primate-lead-finder

./: .env.example  .gitignore  README.md  config.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
public/: index.html
services/: ai.py  email.py  exporter.py  hunter.py  people.py
sources/: github.py  producthunt.py  yc.py
src/: app.py  config.py  pipeline.py
src/services/: email.py
src/storage/: seen.py
src/utils/: sse.py
