[project]
name = "primate-lead-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.137.1",
    "openpyxl>=3.1.5",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.49.0",
]
